# evasion-analytics

./: .gitignore  EXPORTING.md  README.md  pyproject.toml  requirements.txt
docs/: architecture-animation.html  architecture-detail.html
docs/methodology/: 04_cv_strategy.md  05_model_architecture.md  08_loss_functions.md  13_ablation_studies.md  16_lstm_gnn_integration.md
results/: baseline-comparison.json  v3.3.1-per-fold-metrics.json
scripts/: demo_architecture.py
src/: config.py
src/architecture/: __init__.py  plr_tokenizer.py  unified_model.py
src/data/: __init__.py  _encoders.py  cross_validation.py  datasets.py  feature_engineering.py
src/evaluation/: __init__.py  inference.py
src/training/: __init__.py  train.py
