[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evasion-analytics"
version = "3.3.1"
description = "Multi-task FT-Transformer with PLR tokenizer for police-enforcement risk prediction (academic carve-out of Evasion V2)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Stan Calvo" },
  { name = "Miguel Drake Saldaña" },
  { name = "Julio García-Maroto del Río" },
  { name = "Juan Juzgado García-Aranda" },
  { name = "Julian Lloyd Wessel" },
]
keywords = [
  "tabular-deep-learning",
  "ft-transformer",
  "policing",
  "spatiotemporal-prediction",
  "multi-task-learning",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "scikit-learn>=1.3",
  "h3>=4.0",
  "tqdm>=4.65",
  "holidays>=0.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1",
  "mypy>=1.5",
]

[project.urls]
Homepage = "https://evasion.run/academic"
"Executive Report" = "https://evasion.run/academic-assets/executive-report.pdf"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
